--- a/30.operation/gwebc/.goreleaser.yml
+++ b/30.operation/gwebc/.goreleaser.yml
@@ -12,7 +12,7 @@ builds:
     goarch:
       - amd64
     hooks:
-      pre: build.cmd 
+      post: build.cmd 
 archives:
   - 
     format: binary
