ADD: nwdiag, blockdiag, diagrams

--- a/40.develop/dochub/Dockerfile
+++ b/40.develop/dochub/Dockerfile
@@ -1,12 +1,12 @@
+#syntax = docker/dockerfile:1.3-labs
 FROM rockylinux:8.5
-
 #-----------------------------------------------------
 # install: java, plantuml
 #-----------------------------------------------------
 RUN set -eux ;
-RUN dnf -y install which iproute
+RUN dnf -y install which
 RUN dnf -y install java-1.8.0-openjdk java-1.8.0-openjdk-devel graphviz
-
+#-----------------------------------------------------
 RUN mkdir -p /opt/plantuml
 WORKDIR /opt/plantuml
 ENV UML="http://sourceforge.net/projects/plantuml/files/plantuml.jar/download" 
@@ -19,7 +19,8 @@ RUN set -eux ; \
   chmod 755 /usr/local/bin/plantuml
 RUN set -eux ; \
   dnf -y install langpacks-ja 
-
+#        vlgothic-fonts vlgothic-p-fonts  \
+#        google-noto-cjk-fonts-common google-noto-sans-cjk-ttc-fonts google-noto-serif-cjk-ttc-fonts
 #-----------------------------------------------------
 # install: python3, mkdocs
 #-----------------------------------------------------
@@ -31,11 +32,20 @@ RUN pip3 install mkdocs-material
 RUN pip3 install fontawesome_markdown
 
 #-----------------------------------------------------
-# install: ruby3
+# install: blockdiag, nwdiag
+#-----------------------------------------------------
+RUN pip3 install blockdiag nwdiag
+
+#-----------------------------------------------------
+# install: diagrams
+#-----------------------------------------------------
+RUN pip3 install diagrams
+
+#-----------------------------------------------------
+# install: ruby3,
 #-----------------------------------------------------
 RUN set -eux ; \
   dnf module reset ruby -y && dnf install -y @ruby:3.0
-
 #-----------------------------------------------------
 # install: rbenv, ruby3.1, asciidoctor
 #-----------------------------------------------------
@@ -59,6 +69,7 @@ RUN dnf module reset nodejs  -y
 RUN dnf -y install @nodejs:16 npm
 RUN npm -y install -g n && n stable && dnf -y remove nodejs npm
 RUN npm -y install -g uiflow
+#RUN exec $SHELL -l
 
 #-----------------------------------------------------
 # test: version
@@ -71,5 +82,8 @@ RUN  \
   npm -v; \
   asciidoctor -v; \
   java -showversion |& head -3; \
-  plantuml  -v
-
+  plantuml  -v; \
+  nwdiag --version \
+  blockdiag --version ; \
+  pip3 list | grep -e diagrams -e graphviz 
+# yum install iproute
